devops/specs/ui-admin/ui-admin-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-admin
  namespace: ui
spec:
  hosts:
    - 'ui-admin.ui.monstrs.dev'
  gateways:
    - ui-admin
  http:
    - route:
        - destination:
            host: ui-admin
            port:
              number: 80
